--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+@font-face {
+  font-family: "Futura Condensed";
+  src: url("./fonts/Futura/FUTURAMC.TTF") format("truetype");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Futura";
+  src: local("Futura"), url("./fonts/Futura/FutuLt.ttf") format("truetype");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "Futura";
+  src: local("Futura"), url("./fonts/Futura/FUTURAH.TTF") format("truetype");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Futura";
+  src: local("Futura"), url("./fonts/Futura/FUTURAB_0.TTF") format("truetype");
+  font-weight: 500;
 }
