--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@ body {
   position: relative;
   padding-bottom: 50px;
 }
+
+.spec-score {
+ 
+}
 .fc-title {
   font-family: "Futura Condensed";
 }
@@ -111,7 +115,7 @@ body {
   padding: 0 20px;
 }
 .complete-content-title {
-  font-family: "Futura COndensed";
+  font-family: "Futura COndensed", sans-serif;
   font-size: 50px;
   color: #2fa703;
   text-align: center;
