--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,11 @@ body {
 }
 
 .spec-score {
- 
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 300px;
+  height: 300px;
 }
 .fc-title {
   font-family: "Futura Condensed";
