--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,14 @@ body {
   height: 40vmin;
   pointer-events: none;
 }
-
+.wrapper-body {
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  padding-bottom: 50px;
+}
 .wrapper-home {
   min-height: 100vh;
   background-size: cover;
@@ -36,13 +43,8 @@ body {
   position: relative;
   padding-bottom: 50px;
 }
-
-.spec-score {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 300px;
-  height: 300px;
+.wrapper-body.wrapper-badge {
+  padding-top: 0;
 }
 .fc-title {
   font-family: "Futura Condensed";
@@ -54,7 +56,18 @@ body {
   font-weight: 600;
   padding: 10px 20px;
 }
-
+.btn:hover {
+  background: #227d01;
+  color: #fff;
+}
+.spec-badge {
+  max-width: 400px;
+  margin: 0 auto;
+  display: block;
+}
+.pt-50 {
+  padding-top: 50px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -118,6 +131,11 @@ body {
   margin-bottom: 50px;
   padding: 0 20px;
 }
+.page-content {
+  margin-top: 0px;
+  margin-bottom: 50px;
+  /* padding: 0 20px; */
+}
 .complete-content-title {
   font-family: "Futura COndensed", sans-serif;
   font-size: 50px;
@@ -129,6 +147,9 @@ body {
   font-size: 16px;
   margin-bottom: 30px;
   font-weight: 600;
+}
+.sec-title {
+  font-size: 40px;
 }
 
 .form-group label {
@@ -146,6 +167,28 @@ body {
 .form-group .form-control:focus {
   outline: 0;
   box-shadow: none;
+}
+.spec-score {
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 300px;
+  width: 300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.spec-score span {
+  color: #f3931b;
+  font-family: "Futura Condensed", sans-serif;
+  font-size: 120px;
+  padding-top: 34px;
+}
+.share-text {
+  display: block;
+}
+.share-button i {
+  font-size: 30px;
 }
 .blue {
   background-color: #61dafb;
